// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App should match snapshot 1`] = `
<table
  className="app"
>
  <tbody>
    <tr>
      <td
        className="navigation"
      >
        <div
          className="scrollable"
        >
          <ul>
            <li>
              <a
                href="#/"
                onClick={[Function]}
              >
                Intro
              </a>
            </li>
            <li>
              <a
                href="#/what-is-monkey-patching/"
                onClick={[Function]}
              >
                What is monkey patching?
              </a>
            </li>
            <li>
              <a
                href="#/why-react-create-element/"
                onClick={[Function]}
              >
                Why React?
              </a>
            </li>
            <li>
              <a
                href="#/react-highlight-updates/"
                onClick={[Function]}
              >
                React highlight updates
              </a>
            </li>
            <li>
              <a
                href="#/material-ui-button-effect/"
                onClick={[Function]}
              >
                Material UI button effect
              </a>
            </li>
            <li>
              <a
                href="#/react-fastclick/"
                onClick={[Function]}
              >
                React fastclick
              </a>
            </li>
            <li>
              <a
                href="#/simple-patch-function/"
                onClick={[Function]}
              >
                Simple patch function
              </a>
            </li>
            <li>
              <a
                href="#/llamify/"
                onClick={[Function]}
              >
                Llamify
              </a>
            </li>
            <li>
              <a
                href="#/scramble/"
                onClick={[Function]}
              >
                Scramble
              </a>
            </li>
            <li>
              <a
                href="#/internationalization/"
                onClick={[Function]}
              >
                Internationalization
              </a>
            </li>
          </ul>
        </div>
      </td>
      <td
        className="main"
      >
        <div>
          <h1
            className="page-title"
          >
            Intro
          </h1>
          <div
            className="scrollable"
          >
            <div
              className="container"
            >
              <div
                className="vertical-center"
              >
                <div>
                  <h2>
                    Monkey Patching React
                  </h2>
                  <p>
                    Hello! My name is Jake, and today I'm going to show you some totally not hacks at all, believe me, I promise, really not hacks... awesome monkey patching of React.
                  </p>
                  <h2>
                    Want more awesome stuff?
                  </h2>
                  <p>
                    Here's some links you might enjoy:
                  </p>
                  <ul>
                    <li>
                      <a
                        href="https://github.com/JakeSidSmith/react-monkey-patching"
                        target="_blank"
                        title="This demo"
                      >
                        This demo - github.com/JakeSidSmith/react-monkey-patching
                      </a>
                    </li>
                    <li>
                      <a
                        href="http://jakesidsmith.com"
                        target="_blank"
                        title="My Blog"
                      >
                        My Blog - jakesidsmith.com
                      </a>
                    </li>
                    <li>
                      <a
                        href="https://github.com/jakesidsmith"
                        target="_blank"
                        title="My GitHub"
                      >
                        My GitHub - github.com/jakesidsmith
                      </a>
                    </li>
                    <li>
                      <a
                        href="https://twitter.com/jakesidsmith"
                        target="_blank"
                        title="My Twitter"
                      >
                        My Twitter - twitter.com/jakesidsmith
                      </a>
                    </li>
                    <li>
                      <a
                        href="https://www.npmjs.com/package/react-highlight-updates"
                        target="_blank"
                        title="React Highlight Updates"
                      >
                        React Highlight Updates (we'll cover this shortly) - npmjs.com/package/react-highlight-updates
                      </a>
                    </li>
                    <li>
                      <a
                        href="https://www.npmjs.com/package/react-fastclick"
                        target="_blank"
                        title="React Fastclick"
                      >
                        React Fastclick (we'll cover this briefly also) - npmjs.com/package/react-fastclick
                      </a>
                    </li>
                  </ul>
                </div>
              </div>
            </div>
          </div>
        </div>
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`App should match snapshot when llamified 1`] = `
<table
  className="app"
>
  <tbody>
    <tr>
      <td
        className="navigation"
      >
        <div
          className="scrollable"
        >
          <ul>
            <li>
              <a
                href="#/"
                onClick={[Function]}
              >
                Llama
              </a>
            </li>
            <li>
              <a
                href="#/what-is-monkey-patching/"
                onClick={[Function]}
              >
                Llama llama llama llama?
              </a>
            </li>
            <li>
              <a
                href="#/why-react-create-element/"
                onClick={[Function]}
              >
                Llama Llama?
              </a>
            </li>
            <li>
              <a
                href="#/react-highlight-updates/"
                onClick={[Function]}
              >
                Llama llama llama
              </a>
            </li>
            <li>
              <a
                href="#/material-ui-button-effect/"
                onClick={[Function]}
              >
                Llama LLAMA llama llama
              </a>
            </li>
            <li>
              <a
                href="#/react-fastclick/"
                onClick={[Function]}
              >
                Llama llama
              </a>
            </li>
            <li>
              <a
                href="#/simple-patch-function/"
                onClick={[Function]}
              >
                Llama llama llama
              </a>
            </li>
            <li>
              <a
                href="#/llamify/"
                onClick={[Function]}
              >
                Llama
              </a>
            </li>
            <li>
              <a
                href="#/scramble/"
                onClick={[Function]}
              >
                Llama
              </a>
            </li>
            <li>
              <a
                href="#/internationalization/"
                onClick={[Function]}
              >
                Llama
              </a>
            </li>
          </ul>
        </div>
      </td>
      <td
        className="main"
      >
        <div>
          <h1
            className="page-title"
          >
            Llama
          </h1>
          <div
            className="scrollable"
          >
            <div
              className="container"
            >
              <div
                className="vertical-center"
              >
                <div>
                  <h2>
                    Llama Llama Llama
                  </h2>
                  <p>
                    Llama! Llama llama llama Llama, llama llama LLAMA'llama llama llama llama llama llama llama llama llama llama llama, llama llama, LLAMA llama, llama llama llama... llama llama llama llama Llama.
                  </p>
                  <h2>
                    Llama llama llama llama?
                  </h2>
                  <p>
                    Llama'llama llama llama llama llama llama:
                  </p>
                  <ul>
                    <li>
                      <a
                        href="https://github.com/JakeSidSmith/react-monkey-patching"
                        target="_blank"
                        title="Llama llama"
                      >
                        Llama llama - llama.llama/Llama/llama-llama-llama
                      </a>
                    </li>
                    <li>
                      <a
                        href="http://jakesidsmith.com"
                        target="_blank"
                        title="Llama Llama"
                      >
                        Llama Llama - llama.llama
                      </a>
                    </li>
                    <li>
                      <a
                        href="https://github.com/jakesidsmith"
                        target="_blank"
                        title="Llama Llama"
                      >
                        Llama Llama - llama.llama/llama
                      </a>
                    </li>
                    <li>
                      <a
                        href="https://twitter.com/jakesidsmith"
                        target="_blank"
                        title="Llama Llama"
                      >
                        Llama Llama - llama.llama/llama
                      </a>
                    </li>
                    <li>
                      <a
                        href="https://www.npmjs.com/package/react-highlight-updates"
                        target="_blank"
                        title="Llama Llama Llama"
                      >
                        Llama Llama Llama (llama'llama llama llama llama) - llama.llama/llama/llama-llama-llama
                      </a>
                    </li>
                    <li>
                      <a
                        href="https://www.npmjs.com/package/react-fastclick"
                        target="_blank"
                        title="Llama Llama"
                      >
                        Llama Llama (llama'llama llama llama llama llama) - llama.llama/llama/llama-llama
                      </a>
                    </li>
                  </ul>
                </div>
              </div>
            </div>
          </div>
        </div>
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`App should match snapshot when scrambled 1`] = `
<table
  className="app"
>
  <tbody>
    <tr>
      <td
        className="navigation"
      >
        <div
          className="scrollable"
        >
          <ul>
            <li>
              <a
                href="#/"
                onClick={[Function]}
              >
                Inrto
              </a>
            </li>
            <li>
              <a
                href="#/what-is-monkey-patching/"
                onClick={[Function]}
              >
                Waht is moenky phcitang?
              </a>
            </li>
            <li>
              <a
                href="#/why-react-create-element/"
                onClick={[Function]}
              >
                Why Recat?
              </a>
            </li>
            <li>
              <a
                href="#/react-highlight-updates/"
                onClick={[Function]}
              >
                Rcaet hghigilht uadepts
              </a>
            </li>
            <li>
              <a
                href="#/material-ui-button-effect/"
                onClick={[Function]}
              >
                Meriaatl UI bttoun efcfet
              </a>
            </li>
            <li>
              <a
                href="#/react-fastclick/"
                onClick={[Function]}
              >
                Rceat faticlcsk
              </a>
            </li>
            <li>
              <a
                href="#/simple-patch-function/"
                onClick={[Function]}
              >
                Simlpe patch futcoinn
              </a>
            </li>
            <li>
              <a
                href="#/llamify/"
                onClick={[Function]}
              >
                Llmfaiy
              </a>
            </li>
            <li>
              <a
                href="#/scramble/"
                onClick={[Function]}
              >
                Scrlabme
              </a>
            </li>
            <li>
              <a
                href="#/internationalization/"
                onClick={[Function]}
              >
                Inantienootltiaarzin
              </a>
            </li>
          </ul>
        </div>
      </td>
      <td
        className="main"
      >
        <div>
          <h1
            className="page-title"
          >
            Intro
          </h1>
          <div
            className="scrollable"
          >
            <div
              className="container"
            >
              <div
                className="vertical-center"
              >
                <div>
                  <h2>
                    Mokeny Pichtang Raect
                  </h2>
                  <p>
                    Hlleo! My name is Jake, and today I'm going to sohw you some ttaolly not hakcs at all, beivele me, I poimsre, really not hakcs... aeosmwe mkneoy pthnacig of Rceat.
                  </p>
                  <h2>
                    Wnat more aomsewe sutff?
                  </h2>
                  <p>
                    Hree's some lknis you mghit ejony:
                  </p>
                  <ul>
                    <li>
                      <a
                        href="https://github.com/JakeSidSmith/react-monkey-patching"
                        target="_blank"
                        title="Tihs demo"
                      >
                        This dmeo - giuthb.com/JSatkeSiidmh/react-mkoney-pcthaing
                      </a>
                    </li>
                    <li>
                      <a
                        href="http://jakesidsmith.com"
                        target="_blank"
                        title="My Bolg"
                      >
                        My Bolg - jaeksditsimh.com
                      </a>
                    </li>
                    <li>
                      <a
                        href="https://github.com/jakesidsmith"
                        target="_blank"
                        title="My GiHutb"
                      >
                        My GuitHb - guhtib.com/jaesdimistkh
                      </a>
                    </li>
                    <li>
                      <a
                        href="https://twitter.com/jakesidsmith"
                        target="_blank"
                        title="My Tittewr"
                      >
                        My Ttiwter - ttwteir.com/jmetidasskih
                      </a>
                    </li>
                    <li>
                      <a
                        href="https://www.npmjs.com/package/react-highlight-updates"
                        target="_blank"
                        title="Raect Higighlht Uadtpes"
                      >
                        Racet Hihhgglit Utdeaps (we'll cveor this slhrtoy) - njmps.com/pcgkaae/rceat-higghhlit-uptades
                      </a>
                    </li>
                    <li>
                      <a
                        href="https://www.npmjs.com/package/react-fastclick"
                        target="_blank"
                        title="React Fcaisctlk"
                      >
                        Rceat Fitclasck (we'll cvoer this befliry aslo) - njmps.com/pgkaace/rcaet-fcslcitak
                      </a>
                    </li>
                  </ul>
                </div>
              </div>
            </div>
          </div>
        </div>
      </td>
    </tr>
  </tbody>
</table>
`;
